# spritesheet-cleanup

./: .gitignore  LICENSE  MANIFEST.in  README.md  alpha_processing.py  grid_detection.py  grid_visualization.py  main.py  pixel_restoration.py  pyproject.toml  requirements.txt  setup.py  sprite_segmentation.py
pixelart/: __init__.py  api.py  main.py  sprite_save.py  sprite_segmentation.py
spritesheet_cleanup/: __init__.py  alpha_processing.py  api.py  grid_detection.py  grid_visualization.py  main.py  pixel_restoration.py  sprite_save.py
tests/: __init__.py  test_api.py
