[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spritesheet-cleanup"
version = "0.1.0"
description = "Pixel Art Restoration Tool"
readme = "README.md"
authors = [
    {name = "Jarno Elonen", email = "elonen@iki.fi"}
]
license = "MIT"
keywords = ["pixel-art", "sprite", "restoration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.11"
dependencies = [
    "opencv-python",
    "numpy",
    "scipy",
    "matplotlib",
    "click",
]

[project.urls]
Homepage = "https://github.com/elonen/spritesheet-cleanup"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[project.scripts]
spritesheet-cleanup = "spritesheet_cleanup.main:main"

[tool.setuptools.packages.find]
include = ["spritesheet_cleanup*"]
exclude = ["input*", "debug*", "output*", "examples*", "tests*"]

[tool.setuptools.package-data]
spritesheet_cleanup = ["py.typed"]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["cv2", "cv2.*", "matplotlib", "matplotlib.*", "scipy", "scipy.*", "click", "setuptools", "numpy", "numpy.*", "pytest", "pytest.*"]
ignore_missing_imports = true
